[tool.poetry]
name = "warehouse"
version = "0.1.0"
description = "\"Warehouse is developed for managing medical equipment in emergency unit. I has pre-configured containers names. User can create many of them and add many kinds of medical equipment into them. It has also staff manager and ready to use equipment lists.\""
authors = ["SzymKam <szymon15kaminski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "1.34.8"
botocore = "1.34.8"
charset-normalizer = "3.3.0"
coverage = "7.3.2"
crispy-bootstrap4 = "2022.1"
cryptography = "41.0.4"
django = "4.2.7"
django-bootstrap-datepicker-plus = "5.0.3"
django-crispy-forms = "2.0"
django-environ = "0.10.0"
django-extensions = "3.2.3"
django-querysetsequence = "0.16"
django-storages = "1.14.2"
djangorestframework = "3.14.0"
faker = "19.3.1"
gunicorn = "21.2.0"
html5lib = "1.1"
pdfkit = "1.0.0"
pillow = "10.0.1"
pre-commit = "3.3.3"
psycopg2-binary = "2.9.9"
pypdf = "3.16.3"
python-dateutil = "2.8.2"
requests = "2.31.0"
s3transfer = "0.10.0"
uritemplate = "^4.1.1"
xhtml2pdf = "^0.2.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
