[tool.poetry]
name = "warehouse"
version = "0.1.0"
description = ""
authors = ["SzymKam <szymon15kaminski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
bandit = "^1.7.7"
xhtml2pdf = "^0.2.15"
django = "4.2.7"
django-environ = "^0.11.2"
django-extensions = "^3.2.3"
djangorestframework = "^3.14.0"
uritemplate = "^4.1.1"
django-storages = "^1.14.2"
crispy-bootstrap4 = "^2024.1"
psycopg2-binary = "^2.9.9"
django-querysetsequence = "^0.17"
boto3 = "^1.34.51"
faker = "^23.3.0"
pre-commit = "^3.6.2"
gunicorn = "^21.2.0"
safety = "^3.0.1"
ruff = "^0.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
